Remove EmployeeServiceLiveTest usage of new URI.